# cosflo-utils

./: .envrc  .gitignore  README.md  hello.py  main.py  pyproject.toml
generators/: __init__.py  pdf.py  price_tags.py  qr_codes.py
notebooks/: backing_cards.py  data_sync.py  price_tags.py  sumup_import.py
