[project]
name = "cosflo-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click==8.1.0",
    "marimo>=0.14.10",
    "pypdf>=5.7.0",
    "qrcode[pil]>=8.0",
    "reportlab>=4.2.5",
    "requests>=2.32.4",
    "svglib>=1.5.1",
    "typer>=0.15.3",
]

[tool.ruff]
line-length = 88
exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "C",  # mccabe rules
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
ignore = [
    "C901",  # max-complexity-10
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.marimo.runtime]
pythonpath = ["."]
